--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">DWIT</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="username_email">Username/Email</string>
+    <string name="password">Password</string>
+    <string name="sign_in">Sign In</string>
+    <string name="logo">Logo</string>
+    <string name="fab">fab</string>
 </resources>
