--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,14 @@
     <string name="sign_in">Sign In</string>
     <string name="logo">Logo</string>
     <string name="fab">fab</string>
+    <string name="add_a_picture">Add a picture</string>
+    <string name="address">Address</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="date">Date</string>
+    <string name="starts_at">Starts at</string>
+    <string name="ends_at">Ends at</string>
+    <string name="submit">Submit</string>
+    <string name="some_event">Some Event Title</string>
+    <string name="participants">Participants</string>
 </resources>
