--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="submit">Submit</string>
     <string name="some_event">Some Event Title</string>
     <string name="participants">Participants</string>
+    <string name="send">Send</string>
+    <string name="enter_message">Enter Message</string>
 </resources>
