--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="email">email</string>
     <string name="login">Login</string>
     <string name="create_account">Create Account</string>
+    <string name="join">Join</string>
 </resources>
