--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="login">Login</string>
     <string name="create_account">Create Account</string>
     <string name="join">Join</string>
+    <string name="my_chats">My Chats</string>
+    <string name="search">Search</string>
 
 </resources>
